tests/negative/Internal/LoopingCoercion.juvix
module LoopingCoercion;

type Unit := unit;
open Unit;

trait
type T1 A := mkT1 {pp : A -> A};
open T1 using {mkT1};

trait
type T2 A := mkT2 {pp : A -> A};
open T2 using {mkT2};

coercion instance
fromT1toT2 {A} {{T1 A}} : T2 A :=
  mkT2@{
    pp := T1.pp
  };

coercion instance
fromT2toT1 {A} {{T2 A}} : T1 A :=
  mkT1@{
    pp := T2.pp
  };

main : Unit := T1.pp unit;
